--- a/index.css
+++ b/index.css
@@ -18,3 +18,38 @@ a:hover{
     url('/fonts/MiFie-Wed-Font.ttf')format('truetype'),
     url('/fonts/MiFie-Wed-Font.woff')format('woff'),
 }
+
+.heima_icon{
+    font-family: itheima;
+}
+.heima_icon_phone::before{
+    content: "\e908";
+   
+   
+}
+.heima_icon_tel::before{
+    content: "\e909";
+}
+/* 顶部通栏 */
+.heima_topBar{
+    border: 1px solid #ccc;
+    font-size: 12px;
+    color: #666;
+    position: relative;
+    z-index: 1001;
+}
+.heima_topBar a{
+    color: #666;
+}
+.heima_topBar a:hover{
+    color: #666;
+}
+/* + ~ */
+.heima_topBar>.container>.row>div{
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+}
+.heima_topBar>.container>.row>div + div{
+    border-left: 1px solid#ccc;
+}
