--- a/index.css
+++ b/index.css
@@ -53,3 +53,187 @@ a:hover{
 .heima_topBar>.container>.row>div + div{
     border-left: 1px solid#ccc;
 }
+
+/* 二维码的位置显示、影藏 */
+.heima_app{
+    position: relative;
+    display:block;
+}
+.heima_app img{
+    display: none;
+}
+.heima_app:hover img{
+    display: block;
+    position: absolute;
+    top: 40px;
+    left: 50%;
+    border: 1px solid#ccc;
+    border-top: none;
+    margin-left: -60px;
+    width: 150px;
+    height: 150px;
+}
+/* 注册按钮s */
+.heima_topBar .btn-register{
+    background: #e92322;
+    color: #fff;
+    padding: 3px 15px;
+}
+.heima_topBar .btn-register:hover{
+    color: #fff;
+    border-collapse:  #e92322;
+}
+/* 登入按钮 */
+.heima_topBar .btn-login:hover{
+    text-decoration: none;
+}
+
+/* 导航栏 */
+/* 设置整个导航栏的背景颜色、下边框等 */
+.heima_nav{
+    background-color: #fff;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 0;
+}
+.heima_nav .navbar-brand{
+    color: #777;
+    height: 80px;
+    line-height: 50px;
+}
+.heima_nav .navbar-brand:hover,
+.heima_nav .navbar-brand:focus{
+    color: #5e5e5e;
+    background-color: transparent;
+}
+.heima_nav .navbar-text{
+    color: #777;
+}
+
+/* 设置导航栏每个菜单的样式 */
+.heima_nav .navbar-nav>li>a{
+    color: #777;
+    height: 80px;
+    line-height: 50px;
+}
+.heima_nav .navbar-nav>li>a:hover,
+.heima_nav .navbar-nav>li>a:focus{
+    color:#333;
+    background-color: transparent;
+    border-bottom: 3px solid #E92322;
+}
+/* 设置活动菜单和非活动菜单的样式 */
+.heima_nav .navbar-nav>.active>a,
+.heima_nav .navbar-nav>.active>a:hover,
+.heima_nav .navbar-nav>.active>a:focus{
+    color: #555;
+    background-color: #fff;
+    border-bottom: 3px solid #E92322;
+}
+.heima_nav .navbar-nav>.disabled>a,
+.heima_nav .navbar-nav>.disabled>a:hover,
+.heima_nav .navbar-nav>.disabled>a:focus{
+    color: #ccc;
+    background-color: transparent;
+}
+/* 设置汉堡按钮的样式 */
+.heima_nav .navbar-toggle{
+    border-color: #ddd;
+    margin-top:23px;
+    margin-bottom: 23px;
+}
+.heima_nav .navbar-toggle:hover,
+.heima_nav .navbar-toggle:focus{
+    background-color: #ddd;
+}
+.heima_nav .navbar-toggle .icon-bar{
+    background-color: #888;
+}
+.heima_nav .navbar-collapse,
+.heima_nav .navbar-form{
+    border-color: #e7e7e7;
+}
+.heima_nav .navbar-nav>.open>a,
+.heima_nav .navbar-nav>.open>a:hover,
+.heima_nav .navbar-nav>.open>a:focus{
+    color: #555;
+    background-color: #e7e7e7;
+}
+/* 当屏幕小于或等于767px时菜单的样式 */
+@media(max-width:767px){
+    .heima_nav .navbar-nav .open .dropdown-menu>li>a{
+        color: #777;
+    }
+    .heima_nav .navbar-nav .open .dropdown-menu>li>a:hover,
+    .heima_nav .navbar-nav .open .dropdown-menu>li>a:focus{
+        color:#333;
+        background-color: transparent;
+    }
+    .heima_nav .navbar-nav .open .dropdown-menu>.active>a,
+    .heima_nav .navbar-nav .open .dropdown-menu>.active>a:hover,
+    .heima_nav .navbar-nav .open .dropdown-menu>.active>a:focus{
+        color: #555;
+        background-color: #e7e7e7;
+    }
+    .heima_nav .navbar-nav .open .dropdown-menu>.disabled>a,
+    .heima_nav .navbar-nav .open .dropdown-menu>.disabled>a:hover,
+    .heima_nav .navbar-nav .open .dropdown-menu>.disabled>a:focus{
+        color: #ccc;
+        background-color: transparent;
+    }
+}
+.heima_nav .navbar-link{
+    color:#777;
+}
+.heima_nav .navbar-link:hover{
+    color: #333;
+}
+.heima_nav .btn-link{
+    color:#777;
+}
+.heima_nav .btn-link:hover,
+.heima_nav .btn-link:focus{
+    color:#333;
+}
+.heima_nav .btn-link[disabled]:hover,
+fieldset[disabled] .heima_nav .btn-link:hover,
+.heima_nav .btn-link[disabled]:focus,
+fieldset[disabled] .heima_nav .btn-link:focus{
+    color: #ccc;
+}
+/* 信息 */
+.heima_info{
+    padding: 50px;
+    border-bottom: 1px solid#ccc;
+}
+.heima_info .container{
+    width: 910px;
+}
+.heima_info .heima_icon{
+    font-size: 30px;
+}
+.heima_info .col-md-4{
+    padding: 10px;
+}
+.heima_info a:hover{
+    color: #E92322;
+}
+/* 字体图标 */
+.heima_icon_E903::before{
+    content: "\e903";
+}
+.heima_icon_E907::before{
+    content: "\e907";
+}
+.heima_icon_E901::before{
+    content: "\e901";
+}
+.heima_icon_E900::before{
+    content: "\e900";
+}
+.heima_icon_E904::before{
+    content: "\e904";
+}
+.heima_icon_E902::before{
+    content: "\e902";
+}
